fix some layout problem

--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,25 @@
 .App {
-  text-align: center;
-}
-
-.workSpace{
-    background-color: #E1E1E1 ;
-    width:100%;
-    height:1024px;
+  display: flex;
+  background-color: #E1E1E1 ;
+  width:100%;
+  height:100%;
+  flex-direction: column;
+  align-items: center;
 }
 
 .bg_navbar{
     width: 100%;
-    height: 76px;
     font-family: Roboto-Regular;
     background: #4A90E2 ;
     font-size: 24px;
     color: #00408B;
     display: flex ;
-    justify-content:space-evenly;
-    align-items: center;
 }
 .navContainer{
     display: flex;
-    max-width: 660px;
+    width: 100%;
+    justify-content:space-evenly;
+    text-align: center;
 }
 
 .bg_navbar .navContainer .filter{
@@ -75,7 +73,7 @@
     text-align: left;
     background-color: #E1E1E1;
 }
-.todoList .todoCheckbox #checkbox{
+#checkbox{
     height: 24px;
     width: 24px;
     margin-right:1.56%;
@@ -90,12 +88,21 @@
 .checkLabel{
     width:80%;
 }
-
+#checkedBox{
+    height: 24px;
+    width: 24px;
+    margin-right:1.56%;
+}
 .checkbox{
     display:flex;
     justify-content: space-between;
     width:auto;
 
+}
+.checkedBox{
+    display:flex;
+    justify-content: space-between;
+    width:auto;
 }
 .todoCheckbox .checkbox{
     width:24%;
